--- a/web_assignment_function_4th_semifinal/src/main/webapp/index.html
+++ b/web_assignment_function_4th_semifinal/src/main/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>기업형 웹 페이지</title>
+    <title>BOARD PORTAL</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <script
       src="http://kit.fontawesome.com/c47106c6a7.js"
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1><a href="#">DCODLAB</a></h1>
+        <h1><a href="index.html">BOARD</a></h1>
 
         <ul id="gnb">
           <li><a href="#">DEPARTMENT</a></li>
@@ -27,11 +27,7 @@
         </ul>
 
         <ul class="util">
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Help</a></li>
           <li><a href="./_member/login_main.jsp">Login</a></li>
-          <li><a href="#">Join</a></li>
-          <li><a href="#">Sitemap</a></li>
         </ul>
       </div>
     </header>
@@ -39,12 +35,8 @@
     <figure>
       <video src="img/visual.mp4" autoplay muted loop></video>
       <div class="inner">
-        <h1>INNOVATION</h1>
+        <h1>환영합니다!</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
-          Laudantium ipsum tempora ab. Eum culpa aliquam inventore deserunt rem
-          ex, cum optio vitae facere, dolore itaque voluptatem ratione
-          repudiandae perspiciatis quidem.
         </p>
         <a href="#">view detail</a>
       </div>
