--- a/web_assignment_function_4th_semifinal/src/main/webapp/index.html
+++ b/web_assignment_function_4th_semifinal/src/main/webapp/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <figure>
-      <video src="img/visual.mp4" autoplay muted loop></video>
+      <video src="img/lol.mp4" autoplay muted loop></video>
       <div class="inner">
         <h1>환영합니다!</h1>
         <p>
